[project]
name = "comfyui-healthcheck"
description = "A lightweight health check plugin for ComfyUI that monitors custom node import status and provides colorful summary reports"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/love530love/ComfyUI-HealthCheck"
Issues = "https://github.com/love530love/ComfyUI-HealthCheck/issues"

[tool.comfy]
PublisherId = "love530love"
DisplayName = "ComfyUI HealthCheck"
Icon = "🔍"