[project]
name = "comfyui-healthcheck"
description = "A lightweight health check plugin for ComfyUI"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/love530love/ComfyUI-HealthCheck"
Issues = "https://github.com/love530love/ComfyUI-HealthCheck/issues"

[tool.comfy]
PublisherId = "aitechlab"
DisplayName = "ComfyUI HealthCheck"
Icon = ""